Packages_2024/gsl_2.7.1/gsl/gsl_linalg.inc


function gsl_linalg_ldlt_decomp(A: Pgsl_matrix): longint; cdecl; external libgsl;
function gsl_linalg_ldlt_solve(LDLT: Pgsl_matrix; b: Pgsl_vector; x: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_ldlt_svx(LDLT: Pgsl_matrix; x: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_ldlt_rcond(LDLT: Pgsl_matrix; rcond: Pdouble; work: Pgsl_vector): longint; cdecl; external libgsl;

function gsl_linalg_ldlt_band_decomp(A: Pgsl_matrix): longint; cdecl; external libgsl;
function gsl_linalg_ldlt_band_solve(LDLT: Pgsl_matrix; b: Pgsl_vector; x: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_ldlt_band_svx(LDLT: Pgsl_matrix; x: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_ldlt_band_unpack(LDLT: Pgsl_matrix; L: Pgsl_matrix; D: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_ldlt_band_rcond(LDLT: Pgsl_matrix; rcond: Pdouble; work: Pgsl_vector): longint; cdecl; external libgsl;

function gsl_linalg_symmtd_decomp(A: Pgsl_matrix; tau: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_symmtd_unpack(A: Pgsl_matrix; tau: Pgsl_vector; Q: Pgsl_matrix; diag: Pgsl_vector; subdiag: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_symmtd_unpack_T(A: Pgsl_matrix; diag: Pgsl_vector; subdiag: Pgsl_vector): longint; cdecl; external libgsl;

function gsl_linalg_hermtd_decomp(A: Pgsl_matrix_complex; tau: Pgsl_vector_complex): longint; cdecl; external libgsl;
function gsl_linalg_hermtd_unpack(A: Pgsl_matrix_complex; tau: Pgsl_vector_complex; U: Pgsl_matrix_complex; diag: Pgsl_vector; sudiag: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_hermtd_unpack_T(A: Pgsl_matrix_complex; diag: Pgsl_vector; subdiag: Pgsl_vector): longint; cdecl; external libgsl;

function gsl_linalg_HH_solve(A: Pgsl_matrix; b: Pgsl_vector; x: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_HH_svx(A: Pgsl_matrix; x: Pgsl_vector): longint; cdecl; external libgsl;

function gsl_linalg_solve_symm_tridiag(diag: Pgsl_vector; offdiag: Pgsl_vector; b: Pgsl_vector; x: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_solve_tridiag(diag: Pgsl_vector; abovediag: Pgsl_vector; belowdiag: Pgsl_vector; b: Pgsl_vector; x: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_solve_symm_cyc_tridiag(diag: Pgsl_vector; offdiag: Pgsl_vector; b: Pgsl_vector; x: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_solve_cyc_tridiag(diag: Pgsl_vector; abovediag: Pgsl_vector; belowdiag: Pgsl_vector; b: Pgsl_vector; x: Pgsl_vector): longint; cdecl; external libgsl;

function gsl_linalg_bidiag_decomp(A: Pgsl_matrix; tau_U: Pgsl_vector; tau_V: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_bidiag_unpack(A: Pgsl_matrix; tau_U: Pgsl_vector; U: Pgsl_matrix; tau_V: Pgsl_vector; V: Pgsl_matrix;
  diag: Pgsl_vector; superdiag: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_bidiag_unpack2(A: Pgsl_matrix; tau_U: Pgsl_vector; tau_V: Pgsl_vector; V: Pgsl_matrix): longint; cdecl; external libgsl;
function gsl_linalg_bidiag_unpack_B(A: Pgsl_matrix; diag: Pgsl_vector; superdiag: Pgsl_vector): longint; cdecl; external libgsl;

function gsl_linalg_balance_matrix(A: Pgsl_matrix; D: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_balance_accum(A: Pgsl_matrix; D: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_balance_columns(A: Pgsl_matrix; D: Pgsl_vector): longint; cdecl; external libgsl;

function gsl_linalg_tri_rcond(Uplo: TCBLAS_UPLO_t; A: Pgsl_matrix; rcond: Pdouble; work: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_tri_upper_rcond(A: Pgsl_matrix; rcond: Pdouble; work: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_tri_lower_rcond(A: Pgsl_matrix; rcond: Pdouble; work: Pgsl_vector): longint; cdecl; external libgsl;

type
  Tinvnorm1_func = function(TransA: TCBLAS_TRANSPOSE_t; x: Pgsl_vector; params: pointer): longint; cdecl;

function gsl_linalg_invnorm1(N: Tsize_t; Ainvx: Tinvnorm1_func; params: pointer; Ainvnorm: Pdouble; work: Pgsl_vector): longint; cdecl; external libgsl;

function gsl_linalg_tri_upper_invert(T: Pgsl_matrix): longint; cdecl; external libgsl;
function gsl_linalg_tri_lower_invert(T: Pgsl_matrix): longint; cdecl; external libgsl;
function gsl_linalg_tri_upper_unit_invert(T: Pgsl_matrix): longint; cdecl; external libgsl;
function gsl_linalg_tri_lower_unit_invert(T: Pgsl_matrix): longint; cdecl; external libgsl;
function gsl_linalg_tri_invert(Uplo: TCBLAS_UPLO_t; Diag: TCBLAS_DIAG_t; T: Pgsl_matrix): longint; cdecl; external libgsl;
function gsl_linalg_complex_tri_invert(Uplo: TCBLAS_UPLO_t; Diag: TCBLAS_DIAG_t; T: Pgsl_matrix_complex): longint; cdecl; external libgsl;
function gsl_linalg_tri_LTL(L: Pgsl_matrix): longint; cdecl; external libgsl;
function gsl_linalg_tri_UL(LU: Pgsl_matrix): longint; cdecl; external libgsl;
function gsl_linalg_complex_tri_LHL(L: Pgsl_matrix_complex): longint; cdecl; external libgsl;
function gsl_linalg_complex_tri_UL(LU: Pgsl_matrix_complex): longint; cdecl; external libgsl;
procedure gsl_linalg_givens(a: double; b: double; c: Pdouble; s: Pdouble); cdecl; external libgsl;
procedure gsl_linalg_givens_gv(v: Pgsl_vector; i: Tsize_t; j: Tsize_t; c: double; s: double); cdecl; external libgsl;

// === Konventiert am: 21-8-25 19:10:07 ===


{$ENDIF read_interface}


{$IFDEF read_implementation}



{$ENDIF read_implementation}
